# WildCitaNogo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  board.cc  board.h  bot.cc  bot.h  game.cc  game.h  main.cc  save.cc  save.h
bot/greedy/: CMakeLists.txt  main.cpp
